<resources>
    <string name="app_name">Notes</string>
    <string name="splash_title_text">Notes</string>
    <!-- hint texts -->
    <string name="title_text">Title… </string>
    <string name="subTitle_text">Sub-title… </string>
    <string name="notes_text">Note… </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="priority_low">low</string>
    <string name="priority_medium">medium</string>
    <string name="priority_high">high</string>
    <string name="note_added_message">note successfully added !!</string>
    <string name="note_added_success">note added succesfully!!</string>
    <string name="cant_be_empty">it can\'t be empty!!</string>
    <string name="cleared_all_data">Cleared all data!!</string>
    <string name="deleted_successfully">deleted successfully!!</string>
    <string name="empty_text">click \'+\' to add\nnew task / note</string>
    <string name="all">All</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="notes_app">Notes App</string>
    <string name="about_app_information">Notes App helps to:\n1.Achieve seemless productivity.\n2.Just note down anything anywhere you are .\n3.No need to worry about forgetting any important task.\nW͟a͟r͟n͟i͟n͟g͟ : P͟͟l͟͟e͟͟a͟͟s͟͟e͟͟ d͟͟o͟͟n͟͟t͟͟ u͟͟n͟͟i͟͟n͟͟s͟͟t͟͟a͟͟l͟͟l͟͟ t͟͟h͟͟i͟͟s͟͟ a͟͟p͟͟p͟͟  o͟͟t͟͟h͟͟e͟͟r͟͟w͟͟i͟͟s͟͟e͟͟ y͟͟o͟͟u͟͟l͟͟l͟͟ l͟͟o͟͟s͟͟e͟͟ y͟͟o͟͟u͟͟r͟͟ d͟͟a͟͟t͟͟a͟͟  </string>
    <string name="delete_note_warning">Are you sure that you want to\ndelete this note ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="my_notes">My Notes</string>
    <string name="add_new_note">Add New Note</string>
    <string name="about_app">About App</string>
    <string name="edit_note">Edit Note</string>
    <string name="no_data_to_clear">No data to clear !!</string>
    <string name="ooooff">ooooff</string>

</resources>