<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notes_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.notesapp.home.HomeFragment"
        android:label="@string/my_notes"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_newNoteFragment"
            app:destination="@id/newNoteFragment"
            app:enterAnim="@anim/right_to_center"
            app:exitAnim="@anim/center_to_left"
            app:popEnterAnim="@anim/left_to_center"
            app:popExitAnim="@anim/center_to_right" />
        <action
            android:id="@+id/action_homeFragment_to_editNoteFragment"
            app:destination="@id/editNoteFragment"
            app:enterAnim="@anim/right_to_center"
            app:exitAnim="@anim/center_to_left"
            app:popEnterAnim="@anim/left_to_center"
            app:popExitAnim="@anim/center_to_right" />
    </fragment>
    <fragment
        android:id="@+id/newNoteFragment"
        android:name="com.example.notesapp.newNote.NewNoteFragment"
        android:label="@string/add_new_note"
        tools:layout="@layout/fragment_new_note" >
        <action
            android:id="@+id/action_newNoteFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/left_to_center"
            app:exitAnim="@anim/center_to_right"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/editNoteFragment"
        android:name="com.example.notesapp.editNote.EditNoteFragment"
        android:label="@string/edit_note"
        tools:layout="@layout/fragment_edit_note" >
        <action
            android:id="@+id/action_editNoteFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/left_to_center"
            app:exitAnim="@anim/center_to_right"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="oldData"
            app:argType="com.example.notesapp.database.Notes" />
    </fragment>
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="com.example.notesapp.aboutApp.AboutAppFragment"
        android:label="@string/about_app"
        tools:layout="@layout/fragment_about_app" />
</navigation>