<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    type="com.example.notesapp.home.HomeViewModel"
    name="homeViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_back"
        tools:context=".home.HomeFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/new_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:contentDescription="add_btn"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="#E15454"
            app:fabCustomSize="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="35dp"
            app:tint="#FFFFFF" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_notes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/allPriority" />

        <Button
            android:id="@+id/allPriority"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="5dp"
            android:text="@string/all"
            android:textAllCaps="false"
            android:textColor="#302D2C"
            app:backgroundTint="#DC7474"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toStartOf="@+id/mediumPriority"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="#FFFFFF" />

        <Button
            android:id="@+id/mediumPriority"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/medium"
            android:textAllCaps="false"
            android:textColor="#71605B"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/allPriority"
            app:layout_constraintEnd_toStartOf="@+id/lowPriority"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/allPriority"
            app:layout_constraintTop_toTopOf="@+id/allPriority" />

        <Button
            android:id="@+id/lowPriority"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/low"
            android:textAllCaps="false"
            android:textColor="#71605B"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/mediumPriority"
            app:layout_constraintEnd_toStartOf="@+id/highPriority"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/mediumPriority"
            app:layout_constraintTop_toTopOf="@+id/mediumPriority" />

        <Button
            android:id="@+id/highPriority"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="16dp"
            android:text="@string/high"
            android:textAllCaps="false"
            android:textColor="#71605B"
            app:cornerRadius="25dp"
            app:layout_constraintBottom_toBottomOf="@+id/lowPriority"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/lowPriority"
            app:layout_constraintTop_toTopOf="@+id/lowPriority" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/empty_logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty_here" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/not_found_logo"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/not_found" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-15dp"
            android:text="@string/empty_text"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/empty_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>