<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/demo"
        tools:context=".editNote.EditNoteFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="8dp"
            android:hint="title"
            app:boxStrokeColor="#3E3C39"
            app:boxStrokeWidthFocused="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:helperText="required*"
            app:hintTextColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderText="for eg. morning breakfast"
            app:placeholderTextColor="#6A5E5E"
            app:startIconDrawable="@drawable/ic_baseline_list_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="sub-title"
            app:boxStrokeColor="#3E3C39"
            app:boxStrokeWidthFocused="2dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:helperText="required*"
            app:hintTextColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
            app:placeholderText="for eg. ketogenic diet"
            app:placeholderTextColor="#6A5E5E"
            app:startIconDrawable="@drawable/ic_baseline_format_list_numbered_rtl_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="50"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="start"
            android:hint="notes"
            android:overScrollMode="always"
            app:boxStrokeColor="#3E3C39"
            app:boxStrokeWidthFocused="2dp"
            app:counterEnabled="false"
            app:endIconDrawable="@drawable/ic_baseline_list_24"
            app:endIconMode="custom"
            app:helperText="(optional)"
            app:hintTextColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:placeholderText="for eg. This project should be deliver within 3  days  with  documentation.."
            app:placeholderTextColor="#6A5E5E">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="3"
                android:maxLines="3"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout7"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:boxStrokeColor="#3E3C39"
            app:boxStrokeWidthFocused="2dp"
            app:helperText="priority"
            app:hintTextColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:placeholderTextColor="#6A5E5E">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/myToggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:longClickable="false"
                app:checkedButton="@id/low"
                app:singleSelection="true">


                <Button
                    android:id="@+id/low"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority_low"
                    android:textColor="#000000"
                    android:theme="@style/toggle_buttons_select_color" />

                <Button
                    android:id="@+id/medium"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/priority_medium"
                    android:textColor="#000000"
                    android:theme="@style/toggle_buttons_select_color" />

                <Button
                    android:id="@+id/high"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:baselineAligned="false"
                    android:text="@string/priority_high"
                    android:textColor="#000000"
                    android:theme="@style/toggle_buttons_select_color" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="#E15454"
            app:fabCustomSize="65dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:maxImageSize="35dp"
            app:srcCompat="@drawable/ic_baseline_edit_24"
            app:tint="#ffffff" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>